force-app/main/default/objects/ADM_Application_Approver__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Application that this Approver supports.</description>
    <label>Application</label>
    <referenceTo>ADM_Application__c</referenceTo>
    <relationshipLabel>Application Approvers</relationshipLabel>
    <relationshipName>Application_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>