force-app/main/default/objects/ADM_Application_Approver__c/fields/Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver_Email__c</fullName>
    <description>Email of Approver (may be blank if email is same as User email).</description>
    <inlineHelpText>Email of Approver. If Approver is specified, may be blank or must match Approver&#39;s User email. If Approver is not specified, this field may be set to a distribution list.</inlineHelpText>
    <label>Approver Email</label>
    <type>Email</type>
</CustomField>