force-app/main/default/objects/ADM_Application_Approver__c/fields/Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver_Role__c</fullName>
    <description>The role that this Approver performs.</description>
    <inlineHelpText>Approval Role. Note: &quot;Distribution List&quot; indicated this Approver is for notifications only. &quot;Functional&quot; requires that a Team be entered in the Functional Role field.</inlineHelpText>
    <label>Approver Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buildmaster</fullName>
            </value>
            <value>
                <fullName>Cloud Leader</fullName>
            </value>
            <value>
                <fullName>Development Engineer</fullName>
            </value>
            <value>
                <fullName>Development Manager</fullName>
            </value>
            <value>
                <fullName>Distribution List</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Quality Engineer</fullName>
            </value>
            <value>
                <fullName>QE Manager</fullName>
            </value>
            <value>
                <fullName>Release Coverage</fullName>
            </value>
            <value>
                <fullName>Release Engineer</fullName>
            </value>
            <value>
                <fullName>Release Manager</fullName>
            </value>
            <value>
                <fullName>TechOps Engineer</fullName>
            </value>
            <value>
                <fullName>TechOps Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>