force-app/main/default/objects/ADM_Application_Approver__c/fields/Cloud__c.field-meta.xml
<CustomField>
    <fullName>Cloud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cloud to which this Approver is related.</description>
    <inlineHelpText>Cloud to which this Approver is related.</inlineHelpText>
    <label>Cloud</label>
    <referenceTo>ADM_Cloud__c</referenceTo>
    <relationshipLabel>Application Approvers</relationshipLabel>
    <relationshipName>Application_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>