force-app/main/default/objects/ADM_Application_Approver__c/fields/Executive_Role__c.field-meta.xml
<CustomField>
    <fullName>Executive_Role__c</fullName>
    <description>Title or role of Executive for &quot;Executive&quot; Approver Role.</description>
    <inlineHelpText>Enter the title or role of the Executive when &quot;Executive&quot; Approver Role is selected, otherwise leave blank.</inlineHelpText>
    <label>Executive Role</label>
    <length>32</length>
    <type>Text</type>
</CustomField>