force-app/main/default/objects/ADM_Application_Approver__c/validationRules/Approval_Conext_Must_Be_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Conext_Must_Be_Specified</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Approval_Context__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>Approval_Context__c</errorDisplayField>
    <errorMessage>The Approval Context must be specified.</errorMessage>
</ValidationRule>