force-app/main/default/objects/ADM_Application_Approver__c/validationRules/Approver_must_be_specified_for_Coverage.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_must_be_specified_for_Coverage</fullName>
    <active>true</active>
    <description>An Approver must be specified for Role &quot;Release Coverage&quot;.</description>
    <errorConditionFormula>ISBLANK(Approver__c) &amp;&amp; ISPICKVAL(Approver_Role__c, &quot;Release Coverage&quot;)</errorConditionFormula>
    <errorDisplayField>Approver__c</errorDisplayField>
    <errorMessage>You must specify an Approver for Approver Role &quot;Release Coverage&quot;.</errorMessage>
</ValidationRule>