force-app/main/default/objects/ADM_Application_Approver__c/validationRules/Approver_or_Email_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_or_Email_must_be_specified</fullName>
    <active>true</active>
    <description>Either an Approver or an Email must be specified.</description>
    <errorConditionFormula>ISBLANK(Approver__c)   &amp;&amp;  ISBLANK(Approver_Email__c )</errorConditionFormula>
    <errorMessage>You must specify either an Approver or an Email.</errorMessage>
</ValidationRule>