force-app/main/default/objects/ADM_Application_Approver__c/validationRules/Approver_Role_Must_Be_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_Role_Must_Be_Specified</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Approver_Role__c , &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>Approver_Role__c</errorDisplayField>
    <errorMessage>The Approver Role must be specified.</errorMessage>
</ValidationRule>