force-app/main/default/objects/ADM_Application_Approver__c/validationRules/Approver_Type_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_Type_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Approval_Type__c )</errorConditionFormula>
    <errorDisplayField>Approval_Type__c</errorDisplayField>
    <errorMessage>Approval Type must be specified.</errorMessage>
</ValidationRule>