force-app/main/default/objects/ADM_Application_Approver__c/validationRules/Cloud_must_be_blank_unless_Cloud_Leader.validationRule-meta.xml
<ValidationRule>
    <fullName>Cloud_must_be_blank_unless_Cloud_Leader</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(Approver_Role__c, &quot;Cloud Leader&quot;)) &amp;&amp;  NOT(ISBLANK(Cloud__c))</errorConditionFormula>
    <errorDisplayField>Cloud__c</errorDisplayField>
    <errorMessage>Cloud must be blank unless the Approval Role is Cloud Leader</errorMessage>
</ValidationRule>