force-app/main/default/objects/ADM_Application_Approver__c/validationRules/Cloud_must_be_specified_for_Cloud_Leader.validationRule-meta.xml
<ValidationRule>
    <fullName>Cloud_must_be_specified_for_Cloud_Leader</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Approver_Role__c, &quot;Cloud Leader&quot;) &amp;&amp; ISBLANK(Cloud__c)</errorConditionFormula>
    <errorDisplayField>Cloud__c</errorDisplayField>
    <errorMessage>Cloud must be specified when Approval Role is Cloud Leader</errorMessage>
</ValidationRule>