force-app/main/default/objects/ADM_Application_Approver__c/validationRules/Exec_Role_Blank_unless_Executive_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Exec_Role_Blank_unless_Executive_Role</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Executive_Role__c)) &amp;&amp; NOT(ISPICKVAL(Approver_Role__c, &quot;Executive&quot;))</errorConditionFormula>
    <errorDisplayField>Executive_Role__c</errorDisplayField>
    <errorMessage>Approver Role must be &quot;Executive&quot; when Executive Role is specified.</errorMessage>
</ValidationRule>