force-app/main/default/objects/ADM_Application_Approver__c/validationRules/ExecRole_Specified_For_Executive_Approvr.validationRule-meta.xml
<ValidationRule>
    <fullName>ExecRole_Specified_For_Executive_Approvr</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Approver_Role__c, &quot;Executive&quot;) &amp;&amp; ISBLANK(Executive_Role__c)</errorConditionFormula>
    <errorDisplayField>Executive_Role__c</errorDisplayField>
    <errorMessage>Executive Role must be specified when &quot;Executive&quot; Approver Role is selected.</errorMessage>
</ValidationRule>