force-app/main/default/objects/ADM_Application_Approver__c/validationRules/Team_Blank_unless_Functional_ApproveRole.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_Blank_unless_Functional_ApproveRole</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(Functional_Team__c)) &amp;&amp; NOT(ISPICKVAL(Approver_Role__c, &quot;Functional&quot;))</errorConditionFormula>
    <errorDisplayField>Approver_Role__c</errorDisplayField>
    <errorMessage>Approver Role must be &quot;Functional&quot; when Functional Team is specified.</errorMessage>
</ValidationRule>