force-app/main/default/objects/ADM_Application_Approver__c/validationRules/Team_Specified_Functional_Approver_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_Specified_Functional_Approver_Role</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Approver_Role__c, &quot;Functional&quot;) &amp;&amp; ISBLANK(Functional_Team__c)</errorConditionFormula>
    <errorDisplayField>Functional_Team__c</errorDisplayField>
    <errorMessage>Functional Team must be specified when &quot;Functional&quot; Approver Role is selected.</errorMessage>
</ValidationRule>